--- a/app/src/main/res/layout/fragments_demo.xml
+++ b/app/src/main/res/layout/fragments_demo.xml
@@ -28,7 +28,7 @@
       android:text="@string/playerfragment_text"/>
 
   <fragment
-      android:name="com.google.android.youtube.player.YouTubePlayerFragment"
+      android:name="com.google.android.youtube.player.YouTubePlayerSupportFragment"
       android:id="@+id/youtube_fragment"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"/>
